--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
              <li><a href="#education">Education</a></li>
 
              <li dropdown>
-               <a href="#projects">Projects </a>
+               <a href="#projects">Projects from local </a>
              </li>
            </ul>
 
