--- a/localhost.htm
+++ b/localhost.htm
@@ -1,15 +1,14 @@
-<html ng-app="personalSite">
-  <head>
-    <link href="css/normalize.css">
-    <link href="css/reset.css">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.js"></script>
-    <script src="node_modules/angular-route/angular-route.js"></script>
 
-    <script src="js/app.js"></script>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body ng-controller="MainCtrl">
+<!-- saved from url=(0028)http://localhost:8888/#/home -->
+<html ng-app="personalSite" class="ng-scope"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
+    <script src="./localhost_files/angular.min.js"></script>
+    <script src="./localhost_files/ui-bootstrap-tpls-0.12.0.js"></script>
+    <script src="./localhost_files/angular-route.js"></script>
+
+    <script src="./localhost_files/app.js"></script>
+    <link href="./localhost_files/bootstrap.min.css" rel="stylesheet">
+  <style type="text/css"></style></head>
+  <body ng-controller="MainCtrl" class="ng-scope">
 
     <nav class="navbar navbar-default" role="navigation">
          <!-- Brand and toggle get grouped for better mobile display -->
@@ -20,33 +19,43 @@
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#home">Chantal Lewis</a>
+           <a class="navbar-brand" href="http://localhost:8888/#home">Chantal Lewis</a>
          </div>
 
          <!-- Collect the nav links, forms, and other content for toggling -->
-         <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
+         <div class="collapse navbar-collapse" ng-class="!navCollapsed &amp;&amp; &#39;in&#39;">
            <ul class="nav navbar-nav">
-             <li ><a href="#aboutMe">About Me</a></li>
-              <li><a href="#projects">Projects</a></li>
-             <li><a href="#education">Education</a></li>
-             <li ><a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28">Resume</a></li>
+             <li><a href="http://localhost:8888/#aboutMe">About Me</a></li>
+              <li><a href="http://localhost:8888/#projects">Projects</a></li>
+             <li><a href="http://localhost:8888/#education">Education</a></li>
+             <li><a href="http://localhost:8888/#experience">Resume</a></li>
 
            </ul>
 
            <ul class="nav navbar-nav navbar-right">
-             <li ><a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"><img style="line-height:8px; height:22px; width:78px; padding-top:0px !important;"  src="linkedIn.png"></a></li>
-             <li ><a href="https://github.com/chantal517" target="_blank"><img style="line-height:4px height:16px; width:74px; padding-top:0px !important;"  src="github2.png"></a></li>
+             <li><a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"><img style="line-height:8px; height:22px; width:78px; padding-top:0px !important;" src="./localhost_files/linkedIn.png"></a></li>
+             <li><a href="https://github.com/chantal517" target="_blank"><img style="line-height:4px height:16px; width:74px; padding-top:0px !important;" src="./localhost_files/github2.png"></a></li>
            </ul>
          </div><!-- /.navbar-collapse -->
        </nav>
-       <div style="background-image: url(''); background-size='cover'; display: flex; height:100%; width:100%;" class="container">
-         <div style="height:100%; width:100%;" ng-view>
+      <div style="background:url(background_wood.jpg);" class="container">
+       <div class="container">
+         <!-- ngView:  --><div ng-view="" class="ng-scope"><doctype html="" class="ng-scope">
 
 
-         </div>
+
+<h1>Hello, world!</h1>
+  <p>....</p>
+  <p>
+    This is executed because of this code.
+   </p>
+
+
+</doctype></div>
        </div>
+     </div>
+  
 
-</html>
 
 
 
@@ -106,3 +115,4 @@
   </body>
 </html>
 -->
+</body></html>
