added linked in icon and profile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="node_modules/angular-route/angular-route.js"></script>
     <link rel="stylesheet" href="octicons/octicons.css">
     <script src="js/app.js"></script>
+    <script src="https://use.fontawesome.com/1b39fc68e9.js"></script>
+
 <style>
 
   #wallpaper{
@@ -30,11 +32,22 @@
     font-size: 6em;
 
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-bottom: 20px;
   }
   .ed{
     font-size: 4.5em;
     margin-left: 9px;
     margin-right: 9px;
+  }
+  #linked{
+
+    font-size: 4.25em;
+    margin-left: 9px;
+    margin-right: 9px;
+
+  }
+  .icons{
+    padding-top: 40px;
   }
 
   a { color: white; }
@@ -45,8 +58,12 @@
     <div id="wallpaper">
       <div class="middle" >
         <h1 class="name"> Chantal Lewis </h1>
-        <a href="https://github.com/chantal517" target="_blank"><span class="octicon octicon-mark-github ed"></span></a>
-        <a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28"><span class="octicon octicon-file-text ed"></span></a>
+        <h3> Software Engineer - Student - Tech Enthusiast</h3>
+          <div class="icons">
+            <a href="https://github.com/chantal517" target="_blank"><span class="octicon octicon-mark-github ed"></span></a>
+            <a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28"><span class="octicon octicon-file-text ed"></span></a>
+            <a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"> <i class="fa fa-linkedin-square" id="linked" aria-hidden="true"></i></a>
+          </div>
       </div >
 
 
