--- a/index.html
+++ b/index.html
@@ -2,78 +2,52 @@
   <head>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/page.css">
+<!--
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
+    <script src="js/app.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <link rel="stylesheet" href="octicons/octicons.css">
-    <script src="js/app.js"></script>
     <script src="https://use.fontawesome.com/1b39fc68e9.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/typed/js/typed.js"></script>
+<!-- Change for your own icon
+    <link rel="icon" href="linkedIn.png"> -->
 
 <style>
-
-  #wallpaper{
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(back-img.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    overflow: hidden;
-  }
-
-  .middle{
-    position: absolute;
-    display: block;
-    top: 30%;
-    width: 100%;
-    text-align: center;
-
-  }
-  .name{
-    font-size: 6em;
-
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    margin-bottom: 20px;
-  }
-  .ed{
-    font-size: 4.5em;
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-  #linked{
-
-    font-size: 4.25em;
-    margin-left: 9px;
-    margin-right: 9px;
-
-  }
-  .icons{
-    padding-top: 40px;
-  }
-
-  a { color: white; }
-
 </style>
   </head>
   <body ng-app="personalSite" ng-controller="newCtrl">
-    <div id="wallpaper">
+    <div id="wallpaper" class="wallpaper">
       <div class="middle" >
         <h1 class="name"> Chantal Lewis </h1>
-        <h3> Software Engineer - Student - Tech Enthusiast</h3>
+        <!--<h3> Software Engineer - Student - Tech Enthusiast  </h3> -->
+        <div class="typed">
+          <h3 class="element"></h3>
+        </div>
           <div class="icons">
-            <a href="https://github.com/chantal517" target="_blank"><span class="octicon octicon-mark-github ed"></span></a>
-            <a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28"><span class="octicon octicon-file-text ed"></span></a>
+            <a href="https://github.com/chantal517" target="_blank"><span id="octo" class="octicon octicon-mark-github ed"></span></a>
+            <a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28"><span id="octo" class="octicon octicon-file-text "></span></a>
             <a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"> <i class="fa fa-linkedin-square" id="linked" aria-hidden="true"></i></a>
           </div>
-      </div >
-
-
-
-
-
+      </div>
+    </div>
+    <div class="wallpaper ">
+    <div id="about">
+    <div class="row">
+    <div class="one column"></div>
+    <div style="text-align:right;" class="eleven columns">
+      <a class="nav" href="#"> Eleven</a>
+      <a class="nav" href="#">Twelve </a>
     </div>
 
 
     </div>
+  </div>
 
+
+    </div>
+</div>
   </body>
   </html>
