fixed typed text

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           </div>
       </div>
     </div>
-    <div class="wallpaper ">
+    <div class="wallpaper">
     <div id="about">
-    <div class="row">
-    <div class="one column"></div>
-    <div style="text-align:right;" class="eleven columns">
-      <a class="nav" href="#"> Eleven</a>
-      <a class="nav" href="#">Twelve </a>
+
+        <div class="aboutme">
+          <h2 > About Me </h2>
+        </div>
+
     </div>
 
 
