Updating about me

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html >
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/page.css">
@@ -35,14 +36,16 @@
     </div>
     <div class="wallpaper">
     <div id="about">
-
         <div class="aboutme">
-          <h2 > About Me </h2>
+          <div style="width:750px; top:40%; margin:0 auto;">
+          <h2> About Me </h2>
+          <h1 style="text-align:center;">Hi, Thanks for visiting my website! I am Chantal Lewis, I am a Software Engineer that loves
+              to learn new things. I am currently studying computer science at the University of Missouri.
+              I graduate in December of 2016 and I am actively seeking entry level software engineering/New Grad roles.
+              Feel free to visit my Github, LinkedIn, or Resume using the links above. </h1>
         </div>
-
+        </div>
     </div>
-
-
     </div>
   </div>
 
