updated icons and added about me

--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
         </div>
           <div class="icons">
             <a href="https://github.com/chantal517" target="_blank"><span id="octo" class="octicon octicon-mark-github ed"></span></a>
-            <a target="_blank" href="https://drive.google.com/open?id=0B4EN6Iut0CNpTGNGbTVUcGdWX28"><span id="octo" class="octicon octicon-file-text "></span></a>
-            <a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"> <i class="fa fa-linkedin-square" id="linked" aria-hidden="true"></i></a>
+            <a target="_blank" href="https://drive.google.com/file/d/0B4EN6Iut0CNpaG5rSVkxRGRnTG8/view?usp=sharing"><span id="octo3" class="octicon octicon-file-text "></span></a>
+            <a href="https://www.linkedin.com/in/chantal-lewis-544267b0" target="_blank"><span> <i class="fa fa-linkedin-square" id="linked" aria-hidden="true"></i></span></a>
+            <a href="#link"><span id="octo2" class="octicon octicon-three-bars"></span></a>
+            <div class="iconDesc">
+              <p id="gi">GitHub</p>
+              <p id="re">Resume</p>
+              <p id="li">LinkedIn</p>
+              <p id="ab">About Me</p>
+            </div>
           </div>
+
+
       </div>
     </div>
     <div class="wallpaper">
@@ -39,9 +48,9 @@
         <div class="aboutme">
           <div style="width:750px; top:40%; margin:0 auto;">
           <h2> About Me </h2>
-          <h1 style="text-align:center;">Hi, Thanks for visiting my website! I am Chantal Lewis, I am a Software Engineer that loves
-              to learn new things. I am currently studying computer science at the University of Missouri.
-              I graduate in December of 2016 and I am actively seeking entry level software engineering/New Grad roles.
+          <h1 style="text-align:center;">Hi, thanks for visiting my website! I am a Software Engineer that loves
+              to learn about new technology. I am currently studying computer science at the University of Missouri.
+              I graduate in December of 2016 and I am actively seeking entry level software engineering/new grad roles.
               Feel free to visit my Github, LinkedIn, or Resume using the links above. </h1>
         </div>
         </div>
